Pagination mobile fix

--- a/sass/theme/global/_pagination.scss
+++ b/sass/theme/global/_pagination.scss
@@ -3,6 +3,10 @@
 	justify-content: center;
 }
 
+.pagination {
+	align-items: center;
+}
+
 @mixin pagination-circle {
 	background-color: transparent;
 	background-image:url('../assets/graphics/pagination-circle.svg');
